cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(ParaView REQUIRED)

INCLUDE(${PARAVIEW_USE_FILE})

FIND_PACKAGE(GDAL REQUIRED)
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})

SET(NETCDF_INCLUDE_DIR "Not Found" CACHE FILEPATH "Directory containing netcdf includes")
SET(NETCDF_LIBRARY "Not Found" CACHE FILEPATH "netcdf library")
SET(PROJ_LIBRARY "Not Found" CACHE FILEPATH "proj library")
INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})

ADD_PARAVIEW_PLUGIN(WRFReader "1.0" SERVER_MANAGER_XML WRFReader.xml SERVER_MANAGER_SOURCES WRFReader.cxx ${GDAL_LIBRARY} ${NETCDF_LIBRARY} REQUIRED_ON_SERVER)
TARGET_LINK_LIBRARIES(WRFReader PRIVATE  ${GDAL_LIBRARY} ${NETCDF_LIBRARY} ${PROJ_LIBRARY})


